--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"compile": "npx hardhat compile"
+		"compile": "npx hardhat compile",
+		"hh": "npx hardhat run scripts/deploy.js",
+		"sepolia": "npx hardhat run scripts/deploy.js --network sepolia"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
 		"@nomicfoundation/hardhat-toolbox": "^2.0.2",
+		"@nomiclabs/hardhat-etherscan": "^3.1.7",
+		"dotenv": "^16.1.4",
 		"hardhat": "^2.14.1"
 	}
 }
