--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 	"scripts": {
 		"compile": "npx hardhat compile",
 		"hh": "npx hardhat run scripts/deploy.js",
-		"sepolia": "npx hardhat run scripts/deploy.js --network sepolia"
+		"sepolia": "npx hardhat run scripts/deploy.js --network sepolia",
+		"coverage": "npx hardhat coverage"
 	},
 	"keywords": [],
 	"author": "",
@@ -15,6 +16,8 @@
 		"@nomicfoundation/hardhat-toolbox": "^2.0.2",
 		"@nomiclabs/hardhat-etherscan": "^3.1.7",
 		"dotenv": "^16.1.4",
-		"hardhat": "^2.14.1"
+		"hardhat": "^2.14.1",
+		"hardhat-gas-reporter": "^1.0.9",
+		"solidity-coverage": "^0.8.2"
 	}
 }
